crates/vize_croquis/src/sfc/parse/snapshots/vize_croquis__sfc__parse__tests__closing_template_tag_with_newline.snap
---
source: crates/vize_croquis/src/sfc/parse/tests.rs
expression: template
---
SfcTemplateBlock {
    content: "\n  <div>Content</div>\n",
    loc: BlockLocation {
        start: 10,
        end: 32,
        tag_start: 0,
        tag_end: 44,
        start_line: 1,
        start_column: 11,
        end_line: 3,
        end_column: 1,
    },
    lang: None,
    src: None,
    attrs: {},
}
