crates/vize_croquis/src/sfc/parse/snapshots/vize_croquis__sfc__parse__tests__multiline_closing_tag_complex.snap
---
source: crates/vize_croquis/src/sfc/parse/tests.rs
expression: template
---
SfcTemplateBlock {
    content: "<div class=\"container\">\n    <template v-if=\"show\">\n      Content\n    </template\n    ><template v-else>\n      Other\n    </template>\n  </div>",
    loc: BlockLocation {
        start: 84,
        end: 223,
        tag_start: 73,
        tag_end: 235,
        start_line: 6,
        start_column: 2,
        end_line: 13,
        end_column: 9,
    },
    lang: None,
    src: None,
    attrs: {},
}
