crates/vize_croquis/src/sfc/parse/snapshots/vize_croquis__sfc__parse__tests__script_with_embedded_closing_tag_in_single_quote.snap
---
source: crates/vize_croquis/src/sfc/parse/tests.rs
expression: script
---
SfcScriptBlock {
    content: "\nconst tag = '</script>'\nconst y = 2\n",
    loc: BlockLocation {
        start: 14,
        end: 51,
        tag_start: 0,
        tag_end: 60,
        start_line: 1,
        start_column: 15,
        end_line: 4,
        end_column: 1,
    },
    lang: None,
    src: None,
    setup: true,
    attrs: {
        "setup": "",
    },
    bindings: None,
}
