crates/vize_croquis/src/sfc/parse/snapshots/vize_croquis__sfc__parse__tests__script_with_embedded_closing_tag_in_template_literal.snap
---
source: crates/vize_croquis/src/sfc/parse/tests.rs
expression: script
---
SfcScriptBlock {
    content: "\nconst code = `<script setup>\nconsole.log('hello')\n</script>`\nconst x = 1\n",
    loc: BlockLocation {
        start: 24,
        end: 98,
        tag_start: 0,
        tag_end: 107,
        start_line: 1,
        start_column: 25,
        end_line: 6,
        end_column: 1,
    },
    lang: Some(
        "ts",
    ),
    src: None,
    setup: true,
    attrs: {
        "lang": "ts",
        "setup": "",
    },
    bindings: None,
}
