crates/vize_croquis/src/sfc/parse/snapshots/vize_croquis__sfc__parse__tests__script_with_keyword_template_literal.snap
---
source: crates/vize_croquis/src/sfc/parse/tests.rs
expression: script
---
SfcScriptBlock {
    content: "\nfunction render() {\n  const x = 'test'\n  return `<span>${x}</span>`\n}\n\nfunction throwError() {\n  throw `Error: </script>`\n}\nconst y = 2\n",
    loc: BlockLocation {
        start: 14,
        end: 151,
        tag_start: 0,
        tag_end: 160,
        start_line: 1,
        start_column: 15,
        end_line: 11,
        end_column: 1,
    },
    lang: None,
    src: None,
    setup: true,
    attrs: {
        "setup": "",
    },
    bindings: None,
}
