crates/vize_croquis/src/sfc/parse/snapshots/vize_croquis__sfc__parse__tests__script_with_method_call_template_literal.snap
---
source: crates/vize_croquis/src/sfc/parse/tests.rs
expression: script
---
SfcScriptBlock {
    content: "\nconst result = getTemplate()`<div>${content}</div>`\nconst arr = items.map((x) => `<li>${x}</li>`)\nconst z = 3\n",
    loc: BlockLocation {
        start: 14,
        end: 125,
        tag_start: 0,
        tag_end: 134,
        start_line: 1,
        start_column: 15,
        end_line: 5,
        end_column: 1,
    },
    lang: None,
    src: None,
    setup: true,
    attrs: {
        "setup": "",
    },
    bindings: None,
}
